--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,2 +1,3 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&family=Special+Elite&display=swap');
 @import url(global.css);
+@import url(header.css);
