--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,4 +2,5 @@
 @import url(global.css);
 @import url(header.css);
 @import url(section-normal.css);
-@import url(section-image.css)
+@import url(section-image.css);
+@import url(footer.css);
